<resources>
    <string name="app_name">Inker</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button">Button</string>

    <string name="welcome_back">Welcome back</string>
    <string name="Hello_there">Hello there</string>
    <string name="enter_you_phone_number_to_login">Enter your phone number to login</string>
    <string name="Enter_Phone_No">Enter Phone No.</string>
    <string name="Continue">Continue</string>
    <string name="Dont_have_an_account">Don’t have an account? </string>
    <string name="SignUp">Sign Up</string>
    <string name="SignIn">Sign In</string>
    <string name="country_code">+91</string>
    <string name="country_code2">91</string>
    <string name="Register_Now">Register Now</string>
    <string name="Lets_create_your_account">Let’s create your account</string>
    <string name="Full_Name">Full Name</string>
    <string name="Already_have_an_account">Already have an account? </string>
    <string name="Invalid_mobile_number">Invalid mobile number</string>
    <string name="Invalid_name_format">Invalid name format (First name_Last name)</string>
    <string name="Your_number_doesnt_exist">Your number doesn’t exist. Please register.</string>

    <string name="Verify_OTP">Verify OTP</string>
    <string name="We_have_sent_a_verification_code">We have sent a verification code to</string>
    <string name="Change">Change</string>
    <string name="Didnt_receive_OTP">Didn’t receive OTP ? </string>
    <string name="invalid_otp">Invalid OTP</string>
    <string name="Leaderboard">Leaderboard</string>
    <string name="Bronze_Club">Bronze Club</string>
    <string name="Silver_Club">Silver Club</string>
    <string name="Gold_Club">Gold Club</string>
    <string name="Robomakers">Robomakers</string>
    <string name="JoiningDate">Joining Date</string>
    <string name="colon">:  </string>
    <string name="Get_Started">Get Started</string>
    <string name="Performance">Performance</string>
    <string name="titles">Lorem ipsum dolor amet, consect adipiscing</string>
    <string name="badge">Badges: </string>
    <string name="Streak">Streak: </string>
    <string name="shop">Shop: </string>
    <string name="Cues_Completed">Cues Completed</string>
    <string name="Flashcard_Collected">Flashcard Collected</string>
    <string name="Concepts_Learned">Concepts Learned</string>
    <string name="Time_Spent">Time Spent</string>
    <string name="Mechanical">Mechanical</string>
    <string name="Hours">Hours</string>

</resources>