<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data><variable
        name="listener"
        type="android.view.View.OnClickListener" /></data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        tools:context=".ui.register.RegistrationFragment">

        <!-- TODO: Update blank fragment layout -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:visibility="gone"
            android:id="@+id/errorLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="18dp"
            android:layout_marginTop="26dp"
            android:background="@drawable/textview_error_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bai_jamjuree_regular"
                android:gravity="center"
                android:paddingVertical="9dp"
                android:text="@string/Your_number_doesnt_exist"
                android:textColor="@color/error_text_color_2"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/registerNow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="18dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/bai_jamjuree_bold"
            android:text="@string/Register_Now"
            android:textColor="@color/black"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/errorLayout" />

        <TextView
            android:id="@+id/subTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="18dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/bai_jamjuree_regular"
            android:text="@string/Lets_create_your_account"
            android:textColor="@color/subTitleColor"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registerNow" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/editTextLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="18dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/edittext_default_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/subTitle">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/firstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:background="@null"
                android:fontFamily="@font/bai_jamjuree_medium"
                android:gravity="center_vertical"
                android:hint="@string/Full_Name"
                android:inputType="text"
                android:padding="16dp"
                android:textColor="@color/black"
                android:textColorHint="@color/hintColor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:visibility="gone"
            android:id="@+id/errorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bai_jamjuree_regular"
            android:text="@string/Invalid_name_format"
            android:textColor="@color/error_color"

            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/editTextLayout1"
            app:layout_constraintTop_toBottomOf="@+id/editTextLayout1" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/editTextLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="18dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/edittext_default_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/errorText">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/mobileNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="18dp"
                android:background="@null"
                android:fontFamily="@font/bai_jamjuree_medium"
                android:gravity="center_vertical"
                android:hint="@string/Enter_Phone_No"
                android:inputType="number"
                android:padding="16dp"
                android:textColor="@color/black"
                android:textColorHint="@color/hintColor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/view"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_goneMarginStart="0dp" />


            <TextView
                android:id="@+id/countryCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bai_jamjuree_medium"
                android:gravity="center_vertical"
                android:paddingStart="14dp"
                android:text="@string/country_code"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/view"
                android:layout_width="1dp"
                android:layout_height="24dp"
                android:layout_marginHorizontal="18dp"
                android:background="@color/black"

                android:gravity="center_vertical"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/countryCode"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:visibility="gone"
            android:id="@+id/errorText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bai_jamjuree_regular"
            android:text="@string/Invalid_mobile_number"
            android:textColor="@color/error_color"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/editTextLayout2"
            app:layout_constraintTop_toBottomOf="@+id/editTextLayout2" />


        <TextView
            android:id="@+id/continueBtn"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="18dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/continue_btn_bg"
            android:fontFamily="@font/bai_jamjuree_bold"
            android:gravity="center"

            android:text="@string/Continue"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/errorText2" />

        <LinearLayout
            android:id="@+id/signInLayout"
            android:onClick="@{listener.onClick}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/continueBtn">


            <TextView
                android:id="@+id/baseText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bai_jamjuree_regular"
                android:gravity="center"
                android:text="@string/Already_have_an_account"
                android:textColor="@color/default_text_colors"
                android:textSize="16sp"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bai_jamjuree_semi_bold"
                android:gravity="center"
                android:text="@string/SignIn"
                android:textColor="@color/colorAccent"
                android:textSize="16sp" />


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>