<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="listener"
            type="android.view.View.OnClickListener" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        tools:context=".ui.login.LoginFragment">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="54dp"
            android:fontFamily="@font/bai_jamjuree_bold"
            android:text="@string/Hello_there"
            android:textColor="@color/black"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/subTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"

            android:fontFamily="@font/bai_jamjuree_regular"
            android:text="@string/enter_you_phone_number_to_login"
            android:textColor="@color/subTitleColor"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/editTextLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="18dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/edittext_default_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/subTitle">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/mobileNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@null"
                android:fontFamily="@font/bai_jamjuree_medium"

                android:gravity="center_vertical"
                android:hint="@string/Enter_Phone_No"
                android:inputType="number"
                android:maxLength="10"
                android:paddingHorizontal="20dp"
                android:paddingVertical="16dp"
                android:textColor="@color/black"
                android:textColorHint="@color/hintColor"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/view"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_goneMarginStart="0dp" />


            <TextView
                android:id="@+id/countryCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bai_jamjuree_medium"
                android:gravity="center_vertical"
                android:paddingStart="14dp"
                android:text="@string/country_code"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:visibility="gone"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/view"
                android:layout_width="1dp"
                android:layout_height="24dp"
                android:layout_marginStart="18dp"
                android:background="@color/black"
                android:gravity="center_vertical"

                android:visibility="gone"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/countryCode"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/errorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bai_jamjuree_regular"
            android:text="@string/Invalid_mobile_number"
            android:textColor="@color/error_color"
            android:textSize="14sp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="@+id/editTextLayout"
            app:layout_constraintTop_toBottomOf="@+id/editTextLayout" />

        <TextView
            android:id="@+id/continueBtn"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="18dp"
            android:layout_marginTop="14dp"
            android:background="@drawable/continue_btn_bg"
            android:fontFamily="@font/bai_jamjuree_bold"
            android:gravity="center"
            android:onClick="@{listener.onClick}"
            android:text="@string/Continue"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/errorText" />

        <LinearLayout
            android:id="@+id/signUpLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:gravity="center"
            android:onClick="@{listener.onClick}"
            android:orientation="horizontal"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/continueBtn">


            <TextView
                android:id="@+id/baseText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bai_jamjuree_regular"
                android:gravity="center"
                android:text="@string/Dont_have_an_account"
                android:textColor="@color/default_text_colors"
                android:textSize="16sp"

                />

            <TextView
                android:id="@+id/signUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bai_jamjuree_semi_bold"
                android:gravity="center"
                android:text="@string/SignUp"
                android:textColor="@color/colorAccent"
                android:textSize="16sp" />


        </LinearLayout>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_login_bg2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/continueBtn" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>