<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data></data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.otp.OtpFragment">

        <!-- TODO: Update blank fragment layout -->
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="18dp"
            android:layout_marginTop="54dp"
            android:fontFamily="@font/bai_jamjuree_bold"
            android:text="@string/Verify_OTP"
            android:textColor="@color/black"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/subTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="18dp"

            android:fontFamily="@font/bai_jamjuree_regular"
            android:text="@string/We_have_sent_a_verification_code"
            android:textColor="@color/subTitleColor"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <TextView
            android:id="@+id/mobileNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18sp"
            android:layout_marginTop="7dp"
            android:fontFamily="@font/bai_jamjuree_semi_bold"
            android:gravity="center_vertical"
            android:text="+91 999 888 7878"
            android:textColor="@color/subTitleColor"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/subTitle" />

        <TextView
            android:id="@+id/change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/bai_jamjuree_medium"
            android:gravity="center_vertical"
            android:text="@string/Change"
            android:textColor="@color/btnColor"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/mobileNumber"
            app:layout_constraintStart_toEndOf="@+id/mobileNumber"
            app:layout_constraintTop_toTopOf="@id/mobileNumber" />

    <!--    <in.aabhasjindal.otptextview.OtpTextView
            android:id="@+id/firstPinView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="18dp"
            android:fontFamily="@font/bai_jamjuree_medium"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:bar_enabled="true"
            app:bar_height="0dp"
            app:box_margin="5dp"

            app:height="55dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mobileNumber"
            app:length="6"
            app:otp_box_background="@drawable/edittext_default_bg"
            android:focusable="true"
            android:focusableInTouchMode="true"
            app:otp_box_background_active="@drawable/drawable_yellow_box"
            app:otp_box_background_error="@drawable/drawable_error_box"
            app:otp_box_background_inactive="@drawable/drawable_default_box"
            app:otp_box_background_success="@drawable/drawable_yellow_box"

            app:otp_text_size="20sp"
            app:text_typeface="@font/bai_jamjuree_medium"
            app:width="48dp" />-->

          <com.chaos.view.PinView

                android:id="@+id/firstPinView"
              style="@style/PinWidget.PinView"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginStart="18dp"
              android:layout_marginEnd="18dp"

              android:layout_marginTop="26dp"
              android:cursorVisible="true"
              android:fontFamily="@font/bai_jamjuree_medium"
              android:gravity="center"
              android:inputType="number"
              app:itemSpacing="10dp"

              android:padding="5dp"
              android:textColor="@color/black"
              android:textSize="20sp"
              app:cursorColor="@color/black"
              app:cursorWidth="2dp"
              app:itemCount="6"
              app:itemHeight="51dp"
              app:itemRadius="6dp"
              app:itemWidth="44dp"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toBottomOf="@+id/mobileNumber"
              app:lineColor="@color/borderDefault"
              app:lineWidth="2dp"
              app:viewType="rectangle" />
        <TextView
            android:id="@+id/errorText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bai_jamjuree_regular"
            android:paddingVertical="6dp"
            android:paddingStart="5dp"
            android:text="@string/invalid_otp"
            android:textColor="@color/color_button_Fail"
            android:textSize="14sp"
          android:visibility="gone"
            app:layout_constraintStart_toStartOf="@id/firstPinView"
            app:layout_constraintTop_toBottomOf="@+id/firstPinView" />

        <TextView
            android:id="@+id/continueBtn"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="18dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/continue_btn_bg"
            android:fontFamily="@font/bai_jamjuree_bold"
            android:gravity="center"
             android:visibility="invisible"
            android:text="@string/Verify_OTP"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/errorText2" />

        <LinearLayout
            android:layout_marginBottom="50dp"
            android:id="@+id/resendOtpLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintBottom_toBottomOf="parent">


            <TextView
                android:id="@+id/baseText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bai_jamjuree_regular"
                android:gravity="center"
                android:text="@string/Didnt_receive_OTP"
                android:textColor="@color/default_text_colors"
                android:textSize="16sp"

                />

            <TextView
                android:id="@+id/timer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bai_jamjuree_semi_bold"
                android:gravity="center"
                android:text="00:29"
                android:textColor="@color/colorAccent"
                android:textSize="16sp" />


        </LinearLayout>

        <!--   <com.bhargavms.dotloader.DotLoader
               android:id="@+id/text_dot_loader"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               app:color_array="@array/dot_colors"
               app:dot_radius="4dp"


               app:number_of_dots="3"/>-->



        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_login_bg2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/firstPinView" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>